--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@
     background: rgb(24,43,116);
     background: linear-gradient(90deg, rgba(24,43,116,0.8298669809720763) 26%, rgba(247,0,0,0.7710434515603116) 75%);
     box-shadow: 5px 10px 10px black;
+    cursor: pointer;
 }
 
 .cbtn button:hover{
@@ -56,7 +57,7 @@
     background: linear-gradient(90deg, rgba(247,0,0,0.7710434515603116) 26%, rgba(24,43,116,0.8298669809720763) 75%);
 }
 
-/*-----Content displaying part-----*/
+/*-----Content displaying part -table-----*/
 
 .cdply{
     flex: 1 1 40rem;
@@ -76,6 +77,16 @@
     height: 30vh;
     font-size: 22px;
     font-weight: bold;
+    text-align: left;
+}
+
+.chr1{
+    font-size: 22px;
+    color:rgb(253, 162, 5);
+}
+
+table tr td{
+    padding-left: 35px;
 }
 
 /*-----Footer-----*/
